Rewrite <is-assignable: relation to not use task-get-results anymore.
Everything is done using tasks, so no weird stuff happens when analyzing
the code, like that the result is not available (until the users saves
the file in the editor).

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,8 @@ lib-refactoring/*.generated.str
 /include/
 *.aterm
 BaseC/trans/types/*.generated.str
-tests/*.pp*
-tests/*.analysis*
-tests/*.task
-tests/*.index
+__tests__/*.pp*
+__tests__/*.analysis*
+__tests__/*.task
+__tests__/*.index
+**/__tests__/*.c
