--- a/basec/pom.xml
+++ b/basec/pom.xml
@@ -1,69 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
->
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>nl.tudelft.metac</groupId>
-  <artifactId>basec</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <name>BaseC</name>  
-  <packaging>spoofax-language</packaging>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>nl.tudelft.metac</groupId>
+	<artifactId>basec</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>BaseC</name>
+	<packaging>spoofax-language</packaging>
 
-  <parent>
-    <groupId>org.metaborg</groupId>
-    <artifactId>parent.language</artifactId>
-    <version>1.5.0-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>org.metaborg</groupId>
+		<artifactId>parent.language</artifactId>
+		<version>1.5.0-SNAPSHOT</version>
+		<relativePath />
+	</parent>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.meta.lib.analysis</artifactId>
-      <version>${metaborg-version}</version>
-      <type>spoofax-language</type>
-      <scope>${metaborg-meta-lang-scope}</scope>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.meta.lib.analysis</artifactId>
+			<version>${metaborg-version}</version>
+			<type>spoofax-language</type>
+			<scope>${metaborg-meta-lang-scope}</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.meta.lang.esv</artifactId>
-      <version>${metaborg-version}</version>
-      <type>spoofax-language</type>
-      <scope>${metaborg-meta-lang-scope}</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.meta.lang.template</artifactId>
-      <version>${metaborg-version}</version>
-      <type>spoofax-language</type>
-      <scope>${metaborg-meta-lang-scope}</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.meta.lang.nabl</artifactId>
-      <version>${metaborg-version}</version>
-      <type>spoofax-language</type>
-      <scope>${metaborg-meta-lang-scope}</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.metaborg</groupId>
-      <artifactId>org.metaborg.meta.lang.ts</artifactId>
-      <version>${metaborg-version}</version>
-      <type>spoofax-language</type>
-      <scope>${metaborg-meta-lang-scope}</scope>
-    </dependency>
-  </dependencies>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.meta.lang.esv</artifactId>
+			<version>${metaborg-version}</version>
+			<type>spoofax-language</type>
+			<scope>${metaborg-meta-lang-scope}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.meta.lang.template</artifactId>
+			<version>${metaborg-version}</version>
+			<type>spoofax-language</type>
+			<scope>${metaborg-meta-lang-scope}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.meta.lang.nabl</artifactId>
+			<version>${metaborg-version}</version>
+			<type>spoofax-language</type>
+			<scope>${metaborg-meta-lang-scope}</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.metaborg</groupId>
+			<artifactId>org.metaborg.meta.lang.ts</artifactId>
+			<version>${metaborg-version}</version>
+			<type>spoofax-language</type>
+			<scope>${metaborg-meta-lang-scope}</scope>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.metaborg</groupId>
-        <artifactId>spoofax-maven-plugin</artifactId>
-        <version>${metaborg-version}</version>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
-  </build>
+	<build>
+		<resources>
+			<resource>
+				<directory>trans</directory>
+				<targetPath>trans</targetPath>
+			</resource>
+			<resource>
+				<directory>syntax</directory>
+				<targetPath>syntax</targetPath>
+			</resource>
+			<resource>
+				<directory>src-gen</directory>
+				<targetPath>src-gen</targetPath>
+			</resource>
+		</resources>
+
+		<plugins>
+			<plugin>
+				<groupId>org.metaborg</groupId>
+				<artifactId>spoofax-maven-plugin</artifactId>
+				<version>${metaborg-version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<pardonedLanguages combine.children="append">
+						<pardonedLanguage>NameBindingLanguage</pardonedLanguage>
+						<pardonedLanguage>TypeSystemLanguage</pardonedLanguage>
+					</pardonedLanguages>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
