--- a/metac/pom.xml
+++ b/metac/pom.xml
@@ -13,6 +13,7 @@
 		<groupId>org.metaborg</groupId>
 		<artifactId>parent.language</artifactId>
 		<version>1.5.0-SNAPSHOT</version>
+		<relativePath />
 	</parent>
 
 	<dependencies>
@@ -74,12 +75,33 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>trans</directory>
+				<targetPath>trans</targetPath>
+			</resource>
+			<resource>
+				<directory>syntax</directory>
+				<targetPath>syntax</targetPath>
+			</resource>
+			<resource>
+				<directory>src-gen</directory>
+				<targetPath>src-gen</targetPath>
+			</resource>
+		</resources>
+
 		<plugins>
 			<plugin>
 				<groupId>org.metaborg</groupId>
 				<artifactId>spoofax-maven-plugin</artifactId>
 				<version>${metaborg-version}</version>
 				<extensions>true</extensions>
+				<configuration>
+					<pardonedLanguages combine.children="append">
+						<pardonedLanguage>NameBindingLanguage</pardonedLanguage>
+						<pardonedLanguage>TypeSystemLanguage</pardonedLanguage>
+					</pardonedLanguages>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
