Adding a new maven project for metac runtime utils.
- The Java strategies are still in metac/editor/java. If they are moved
  to metac-runtime-utils/editor/java they're not picked up, which
  results into a wrong "metac-java.jar".

--- a/basec/pom.xml
+++ b/basec/pom.xml
@@ -18,6 +18,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>nl.tudelft.metac</groupId>
+			<artifactId>metac-runtime-utils</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>spoofax-language</type>
+		</dependency>
+		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.meta.lib.analysis</artifactId>
 			<version>${metaborg-version}</version>
