--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>nl.tudelft.metac</groupId>
 	<artifactId>metac-build</artifactId>
 	<packaging>pom</packaging>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.metaborg</groupId>
@@ -14,9 +16,11 @@
 	</parent>
 
 	<modules>
+		<module>metac-runtime-utils</module>
 		<module>basec</module>
 		<module>metac-bitfield</module>
 		<module>metac-sm</module>
 		<module>metac</module>
 	</modules>
+
 </project>
