--- a/metac/pom.xml
+++ b/metac/pom.xml
@@ -19,6 +19,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>nl.tudelft.metac</groupId>
+			<artifactId>metac-runtime-utils</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>spoofax-language</type>
+		</dependency>
+		<dependency>
+			<groupId>nl.tudelft.metac</groupId>
 			<artifactId>basec</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<type>spoofax-language</type>
