--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>basec</module>
 		<module>metac-bitfield</module>
 		<module>metac-sm</module>
+		<module>metac-err</module>
 		<module>metac</module>
 	</modules>
 
