Initial (empty) metac-csp project

--- a/metac/pom.xml
+++ b/metac/pom.xml
@@ -48,6 +48,12 @@
 			<type>spoofax-language</type>
 		</dependency>
 		<dependency>
+			<groupId>nl.tudelft.metac</groupId>
+			<artifactId>metac-csp</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>spoofax-language</type>
+		</dependency>
+		<dependency>
 			<groupId>org.metaborg</groupId>
 			<artifactId>org.metaborg.meta.lib.analysis</artifactId>
 			<version>${metaborg-version}</version>
