--- a/metac-csp/pom.xml
+++ b/metac-csp/pom.xml
@@ -17,9 +17,17 @@
   </parent>
 
   <dependencies>
+
     <dependency>
       <groupId>nl.tudelft.metac</groupId>
       <artifactId>basec</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <type>spoofax-language</type>
+    </dependency>
+
+    <dependency>
+      <groupId>nl.tudelft.metac</groupId>
+      <artifactId>metac-runtime-utils</artifactId>
       <version>1.0.0-SNAPSHOT</version>
       <type>spoofax-language</type>
     </dependency>
