--- a/metac/pom.xml
+++ b/metac/pom.xml
@@ -49,6 +49,12 @@
 		</dependency>
 		<dependency>
 			<groupId>nl.tudelft.metac</groupId>
+			<artifactId>pat-csp</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<type>spoofax-language</type>
+		</dependency>
+		<dependency>
+			<groupId>nl.tudelft.metac</groupId>
 			<artifactId>metac-csp</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 			<type>spoofax-language</type>
