--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>metac-sm</module>
 		<module>metac-err</module>
 		<module>metac-csp</module>
+		<module>pat-csp</module>
 		<module>metac</module>
 	</modules>
 
